...
    <string name="suffix_kg"> kg</string>
    <string name="button_save">Speichern</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="date_picker_title">Datum wählen</string>
    <string name="error_weight_empty">Bitte ein Gewicht eingeben</string>
    <string name="error_weight_range">Gewicht muss zwischen 0,1 und 999,9 liegen</string>
    <string name="error_weight_decimal">Maximal eine Nachkommastelle erlaubt</string>
    <string name="error_weight_invalid">Ungültige Eingabe</string>
    <string name="dialog_delete_title">Eintrag löschen</string>
    <string name="dialog_delete_message">Diesen Gewichtseintrag wirklich löschen?</string>
    <string name="button_delete">Löschen</string>
    <string name="error_date_future">Datum darf nicht in der Zukunft liegen.</string>
    <string name="error_date_duplicate">Für dieses Datum existiert bereits ein Eintrag.</string>
...
